[package]
name = "dxvm"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "High-level virtual machine experiment. Rust continuation/reboot of Sparklet JESS."
homepage = "https://sparklet.org/dxvm/"
repository = "https://github.com/Lamby777/dxvm"
keywords = ["virtual-machine", "vm", "sparklet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
